kubernetes/ufoo/10-tech/argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.agrrh.com`) || Host(`argocd.5426b488.nip.io`)
      middlewares:
        - name: request-headers
          namespace: traefik
      services:
        - kind: Service
          name: argo-cd-argocd-server
          namespace: argocd
          port: 443
